--- a/my.css
+++ b/my.css
@@ -7,18 +7,24 @@ body {
 	cursor: pointer;
 	background-color: #716CA1;
 	text-align: center;
-	width: 400px;
-	height: 400px;
+	width: 200px;
+	height: 200px;
 	padding: 20px;
 }
 
 table {
-	width: 200;
-	height: 200;
+	width: 400;
+	height: 400;
 	margin: auto;
 	text-align: center;
 	color: white;
 	font-style: bold;
 	font-size: 40px;
-	padding: 10px;
+	
+}
+
+.header {
+	background-color: black;
+	height: 175px;
+	border-bottom: 2px solid white;
 }
